# veritas-q

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  K6-LOAD-TEST-REPORT.md  PLAN-C2PA.md  PLAN-LFD-QRNG-INTEGRATION.md  PLAN-NEONDB.md  PLAN-PERCEPTUAL-HASH-FIX.md  PLAN-PWA.md  PLAN-SEAL-INTEGRATION.md  PLAN-WEBAUTHN.md  PLAN.md  README.md  VISION_ALIGNMENT_REPORT.md  render.yaml  test_anchor.txt  test_anchor.txt.veritas
.github/workflows/: ci.yml
_bmad-output/planning-artifacts/: prd.md
docs/: USE-CASES.md  guide-utilisateur.md
scripts/: ci-local.sh  export-c2pa-certs.sh  generate-test-cert.sh
scripts/load-test/: k6-verify.js
veritas-cli/: Cargo.toml  PLAN.md
veritas-cli/src/: exit_codes.rs  main.rs  utils.rs
veritas-cli/src/commands/: anchor.rs  c2pa.rs  mod.rs  seal.rs  verify.rs
veritas-cli/tests/: cli_integration.rs  e2e_workflow.rs
veritas-core/: Cargo.toml  PLAN.md
veritas-core/examples/: anu_tracing.rs
veritas-core/fuzz/: Cargo.toml
veritas-core/fuzz/fuzz_targets/: fuzz_from_cbor.rs  fuzz_verify.rs
veritas-core/src/: error.rs  lib.rs  phash.rs  seal.rs
veritas-core/src/c2pa/: assertion.rs  error.rs  manifest.rs  mod.rs  signer.rs
veritas-core/src/qrng/: PLAN.md  anu.rs  http_client.rs  lfd.rs  mock.rs  mod.rs  provider.rs
veritas-core/src/watermark/: mod.rs  perceptual.rs
veritas-core/tests/: watermark_robustness.rs
veritas-server/: Cargo.toml  Dockerfile  PLAN.md
veritas-server/migrations/: 20260107000000_create_webauthn_tables.sql  20260107100000_create_manifests_table.sql  20260108000000_create_users_table.sql  20260108100000_create_seals_table.sql  20260211000000_anonymize_deleted_users.sql
veritas-server/src/: config.rs  error.rs  lib.rs  main.rs  multipart.rs  openapi.rs  routes.rs  state.rs  validation.rs
veritas-server/src/auth/: mod.rs
veritas-server/src/db/: mod.rs  seal.rs  user.rs
veritas-server/src/handlers/: c2pa.rs  health.rs  mod.rs  resolve.rs  seal.rs  seals.rs  user.rs  verify.rs
veritas-server/src/manifest_store/: error.rs  mod.rs  postgres.rs
veritas-server/src/webauthn/: config.rs  handlers.rs  mds.rs  mod.rs  storage.rs  types.rs
veritas-server/src/webauthn/storage/: memory.rs  mod.rs  postgres.rs
veritas-server/tests/: api_integration.rs
veritas-server/tests/fixtures/: test_rsa_private.pem  test_rsa_public.pem
veritas-wasm/: Cargo.toml
veritas-wasm/src/: lib.rs
www/: .env.example  README.md  index.html  next.config.ts  package.json  proxy.ts  vitest.setup.ts
www/__tests__/components/: InstallBanner.test.tsx  NotificationSettings.test.tsx  PWAStatus.test.tsx
www/__tests__/hooks/: useInstallPrompt.test.ts
www/app/: globals.css  layout.tsx  manifest.ts  page.tsx  sw.ts
www/app/(auth)/: layout.tsx
www/app/(auth)/forgot-password/[[...forgot-password]]/: page.tsx
www/app/(auth)/sign-in/[[...sign-in]]/: page.tsx
www/app/(auth)/sign-up/[[...sign-up]]/: page.tsx
www/app/actions/: push.ts
www/app/dashboard/: layout.tsx  page.tsx
www/app/dashboard/seals/: page.tsx
www/app/dashboard/seals/[id]/: page.tsx
www/app/dashboard/settings/: page.tsx
www/app/dashboard/settings/delete-account/: page.tsx
www/app/dashboard/settings/profile/: page.tsx
www/app/offline/: page.tsx
www/components/: CameraCapture.tsx  CameraPermissionGuard.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ConnectivityStatus.tsx  DashboardNav.tsx  DebugConsole.tsx  DeviceAttestationBadge.tsx  ExportModal.tsx  Header.tsx  HomeTabs.tsx  InstallBanner.tsx  MiniMap.tsx  NotificationSettings.tsx  OfflineIndicator.tsx  PWAStatus.tsx  PendingCapturesList.tsx  PendingSealBadge.tsx  SealBadge.tsx  SealCard.tsx  SealFilters.tsx  SealList.tsx  TabContent.tsx  TabSwitcher.tsx  UserSyncProvider.tsx  VerificationResult.tsx  Verifier.tsx
www/components/camera/: CameraViewfinder.tsx  CaptureControls.tsx  CapturePreview.tsx  LocationCapture.tsx  reducer.ts  useCameraStream.ts  useCapturePipeline.ts  useVideoRecorder.ts  utils.ts
www/components/providers/: QueryProvider.tsx
www/components/ui/: button.tsx  card.tsx  sheet.tsx  sidebar.tsx
www/hooks/: useDeviceAttestation.ts  useInstallPrompt.ts  useOfflineSync.ts  usePushNotifications.ts  useSealMutation.ts  useSealsQuery.ts  useServiceWorker.ts  useUserSync.ts
www/lib/: api.ts  clerk-appearance.ts  device.ts  formatters.ts  offlineDb.ts  verification.ts
www/public/: manifest.json  sw.js
www/scripts/: generate-icons.mjs
www/stores/: offlineStore.ts
