[workspace]
members = [
    "veritas-core",
    "veritas-cli",
    "veritas-wasm",
    "veritas-server",
]
exclude = ["veritas-core/fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ArthurDEV44/veritas-q"

[workspace.dependencies]
# Post-quantum cryptography
pqcrypto-mldsa = "0.1"
pqcrypto-traits = "0.3"

# Async runtime and HTTP client
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
backoff = { version = "0.4", features = ["tokio"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"  # CBOR serialization

# Hashing
sha3 = "0.10"

# Image processing (perceptual hashing)
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
image_hasher = "2.0"

# Utilities
thiserror = "2"
zeroize = { version = "1.8", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
geohash = "0.13"
hex = "0.4"
async-trait = "0.1"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "3"

# Solana dependencies
solana-sdk = "2"
solana-client = "2"
spl-memo = "5"

# Web server dependencies
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace", "timeout", "request-id", "propagate-header"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Rate limiting
tower_governor = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# C2PA (Content Authenticity Initiative)
c2pa = { version = "0.36", default-features = false, features = ["openssl", "v1_api", "unstable_api"] }
openssl = { version = "0.10", features = ["vendored"] }

# Wasm dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"

# Internal crates
veritas-core = { path = "veritas-core", default-features = true }
