[package]
name = "veritas-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for Veritas Q quantum-authenticated media sealing"

[[bin]]
name = "veritas"
path = "src/main.rs"

[features]
default = ["c2pa"]
c2pa = ["veritas-core/c2pa"]

[dependencies]
veritas-core = { workspace = true, features = ["c2pa"] }
pqcrypto-mldsa.workspace = true
pqcrypto-traits.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
colored.workspace = true
hex.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha3.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
spl-memo.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
