[package]
name = "veritas-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core cryptographic primitives for Veritas Q quantum-authenticated media seals"

[features]
default = ["network", "perceptual-hash"]
network = ["tokio", "reqwest", "async-trait", "backoff"]
perceptual-hash = ["image", "blockhash"]
c2pa = ["dep:c2pa", "dep:openssl"]

[dependencies]
pqcrypto-mldsa.workspace = true
pqcrypto-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
sha3.workspace = true
thiserror.workspace = true
chrono.workspace = true
geohash.workspace = true
hex.workspace = true
zeroize.workspace = true
tracing.workspace = true
base64.workspace = true

# Optional network dependencies (not needed for verification-only Wasm)
tokio = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
backoff = { workspace = true, optional = true }

# Optional perceptual hashing dependencies
image = { workspace = true, optional = true }
blockhash = { workspace = true, optional = true }

# Optional C2PA support
c2pa = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
