[package]
name = "veritas-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "REST API server exposing Veritas Q seal/verify operations"

[[bin]]
name = "veritas-server"
path = "src/main.rs"

[dependencies]
veritas-core.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
