[package]
name = "veritas-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "REST API server exposing Veritas Q seal/verify operations"

[lib]
name = "veritas_server"
path = "src/lib.rs"

[[bin]]
name = "veritas-server"
path = "src/main.rs"

[features]
default = ["c2pa"]
c2pa = ["veritas-core/c2pa", "tempfile"]

[dependencies]
veritas-core = { workspace = true, features = ["c2pa"] }
tempfile = { version = "3", optional = true }
hex.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower_governor.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
webauthn-rs.workspace = true
webauthn-rs-proto.workspace = true
url.workspace = true
dashmap.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
